--- a/Views/Login/LoginAdmin.cshtml
+++ b/Views/Login/LoginAdmin.cshtml
@@ -16,60 +16,106 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    <script type="text/javascript">
+        function ShowPopup(title) {
+            $("#MyPopup .modal-title").html(title);
+            //$("#MyPopup .modal-body").html(body);
+            $("#MyPopup").modal("show");
+        }
+
+        $(document).ready(function () {
+
+        });
+    </script>
 </head>
 <body>
     @using (Html.BeginForm("LoginEmployee", "Login", FormMethod.Post))
     {
-        <div class="container">
-            <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <div class="panel-title">Admin Login</div>
-                        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a></div>
+    <div class="container">
+        <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <div class="panel-title">Admin Login</div>
+                    <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="javascript:void(0);" onclick="ShowPopup('Forgot Password')">Forgot password?</a></div>
+                </div>
+
+                <div style="padding-top:30px" class="panel-body">
+                    <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        @Html.TextBoxFor(model => model.Email, htmlAttributes: new { placeholder = "Your Email *", @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
 
-                    <div style="padding-top:30px" class="panel-body">
-                        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                        <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            @Html.TextBoxFor(model => model.Email, htmlAttributes: new { placeholder = "Your Email *", @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        @Html.TextBoxFor(model => model.Password, htmlAttributes: new { placeholder = "Your Email *", @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            @Html.GoogleCaptcha()
+                            @Html.InvalidGoogleCaptchaLabel("Captcha is not valid !")
                         </div>
+                    </div>
 
-                        <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                            @Html.TextBoxFor(model => model.Password, htmlAttributes: new { placeholder = "Your Email *", @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    <div class="input-group">
+                        <div class="checkbox">
+                            <label>
+                                @Html.CheckBoxFor(m => m.RememberMe) Remember me
+                            </label>
                         </div>
-                        <div style="margin-bottom: 25px" class="input-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                @Html.GoogleCaptcha()
-                                @Html.InvalidGoogleCaptchaLabel("Captcha is not valid !")
-                            </div>
-                        </div>
+                    </div>
 
-                        <div class="input-group">
-                            <div class="checkbox">
-                                <label>
-                                    @Html.CheckBoxFor(m => m.RememberMe) Remember me
-                                </label>
-                            </div>
-                        </div>
-
-                        <div style="margin-top:10px" class="form-group">
-                            <div class="col-sm-12 controls">
-                                <button id="btn-login" type="submit" value="LoginEmployee" class="btn btn-success">Login</button>
-                                <a class="btn btn-small" href="/Login/Login">Back</a>
-                            </div>
+                    <div style="margin-top:10px" class="form-group">
+                        <div class="col-sm-12 controls">
+                            <button id="btn-login" type="submit" value="LoginEmployee" class="btn btn-success">Login</button>
+                            <a class="btn btn-small" href="/Login/Login">Back</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div id="MyPopup" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                            &times;
+                        </button>
+                        <h4 class="modal-title">
+                        </h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <div style="margin-bottom:45px" class="form-group">
+                            <div class="col-sm-12 controls">
+                                <input type="text" placeholder="Please enter email*" class="form-control" />
+                            </div>
+                        </div>
+                        <div style="margin-bottom:80px" class="form-group">
+                            <div class="col-sm-12 controls">
+                                <button id="btn_forgotPassword" type="button" class="btn btn-success">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">
+                            Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     }
 
     @Scripts.Render("~/bundles/jqueryval")
