--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -14,12 +14,15 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <style>
-        body {
+        html, body {
             background: url('/Images/homePage.png') no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             background-size: cover;
             -o-background-size: cover;
+            margin: 0;
+            height: 100%;
+            overflow: hidden
         }
     </style>
     <script type="text/javascript">
